--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,33 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.row {
+  display: flex;
+  flex-direction: row;
+  max-width: 80rem;
+  margin: auto;
+  flex-wrap: wrap;
+}
+.col {
+  display: flex;
+  margin: 1rem;
+}
+.col-1-of-1 {
+  justify-content: center;
+  width: calc(100% - 2rem);
+}
+.col-1-of-2 {
+  justify-content: center;
+  width: calc(50% - 2rem);
+}
+.col-1-of-3 {
+  justify-content: center;
+  width: calc(33% - 2rem);
+}
+.col-1-of-4 {
+  justify-content: center;
+  width: calc(25% - 2rem);
+}
 .home .intro h2 {
   padding: 15px;
 }
