--- a/less/index.less
+++ b/less/index.less
@@ -5,6 +5,7 @@
 @import "reset.less";
 @import "global.less";
 
+@import "prelayout.less";
 @import "home-page.less";
 @import "navigation.less";
 @import "footer.less";
