--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,6 +58,12 @@
       }
 
       .btn {
+       
+        a {
+          .anchordefault();
+          .primarybtn();
+        }
+        
       }
     }
 
