--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,38 @@
 // Navigation code here
+
+    .row {
+
+        margin-top: 1rem;
+        background: rgba(220,220,220, 0.5);
+
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        .col-1-of-1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            nav {
+                ul {
+                    display: flex;
+                    li {
+                        margin: 2rem;
+                        font-size: 1.5rem;
+                        a {
+                            list-style: none;
+                            color: black;
+                            border: none;
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+
+
