--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,3 +26,18 @@
 
 
 }
+
+
+.secondarybtn(@color: black) {
+    color: @color;
+    height: 3rem;
+
+
+    &:hover {
+        font-weight: 900;
+        border-top: 1px solid black;
+        padding-top: 5px;
+    }
+
+
+}
