--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,11 @@ table {
 html {
   font-size: 62.5%;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  html {
+    width: calc(100% - 2rem);
+  }
+}
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -159,6 +164,17 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .container {
+    width: calc(100% - 2rem);
+  }
+}
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .content-wrapper {
+    margin: 0 auto;
+    width: calc(100% - 2rem);
+  }
 }
 .row {
   display: flex;
@@ -204,6 +220,16 @@ p {
   border-radius: 20px;
   height: 100%;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .home .space-images img:nth-child(2),
+  .home .space-images img:nth-child(3) {
+    display: none;
+  }
+  .home .space-images img:first-child {
+    width: 100%;
+    margin: 2rem;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -219,6 +245,13 @@ p {
   padding: 50px 60px;
   display: flex;
   justify-content: center;
+}
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 15px;
+    margin: 0;
+  }
 }
 .home .walk .walk-text {
   width: 50%;
@@ -248,6 +281,11 @@ p {
   color: #00ffff;
   box-shadow: 1px 1px 10px #22283A;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .home .walk .walk-text {
+    width: calc(100% - 2rem);
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -257,9 +295,21 @@ p {
   height: auto;
   border-radius: 10px;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .home .walk .walk-img img {
+    width: 374px;
+    height: 280.5px;
+    margin-bottom: 2rem;
+  }
+}
 .row {
-  margin-top: 1rem;
+  margin-top: 2rem;
   background: rgba(220, 220, 220, 0.5);
+}
+.row img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
 }
 .row h1 {
   font-size: 4rem;
@@ -269,6 +319,8 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 0;
+  height: 8rem;
 }
 .row .col-1-of-1 nav ul {
   display: flex;
@@ -279,9 +331,15 @@ p {
 }
 .row .col-1-of-1 nav ul li a {
   list-style: none;
-  color: black;
   border: none;
   text-decoration: none;
+  color: black;
+  height: 3rem;
+}
+.row .col-1-of-1 nav ul li a:hover {
+  font-weight: 900;
+  border-top: 1px solid black;
+  padding-top: 5px;
 }
 footer {
   color: #22283B;
