--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,6 +24,20 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+
+        &:nth-child(2), &:nth-child(3) {
+          display: none;
+        }
+
+        &:first-child {
+          width: 100%;
+          margin: 2rem;
+        }
+
+      }
+
     }
   }
 
@@ -46,6 +60,13 @@
     display: flex;
     justify-content: center;
 
+
+    @media @mobile {
+      flex-direction: column-reverse;
+      padding: 15px;
+      margin: 0;
+    }
+
     .walk-text {
       width: 50%;
 
@@ -65,6 +86,11 @@
         }
         
       }
+
+      @media @mobile {
+        width: calc(100% - 2rem);
+      }
+
     }
 
     .walk-img {
@@ -75,6 +101,13 @@
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @mobile {
+          width: 374px;
+          height: 280.5px;
+          margin-bottom: 2rem;
+        }
+
       }
     }
   }
