--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,8 +2,14 @@
 
     .row {
 
-        margin-top: 1rem;
+        margin-top: 2rem;
         background: rgba(220,220,220, 0.5);
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 0 auto;
+        }
 
 
         h1 {
@@ -15,6 +21,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin-bottom: 0;
+            height: 8rem;
+
             nav {
                 ul {
                     display: flex;
@@ -26,6 +35,7 @@
                             color: black;
                             border: none;
                             text-decoration: none;
+                            .secondarybtn();
                         }
                     }
                 }
