--- a/less/navigation.less
+++ b/less/navigation.less
@@ -30,6 +30,9 @@
                     li {
                         margin: 2rem;
                         font-size: 1.5rem;
+                        @media @mobile {
+                            font-size: 100%;
+                        }
                         a {
                             list-style: none;
                             color: black;
