--- a/less/global.less
+++ b/less/global.less
@@ -15,6 +15,11 @@ html {
 html, body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
+
+  @media @mobile {
+    margin: 0 auto;
+  }
+
 }
 
 h1, h2, h3, h4, h5 {
