--- a/css/index.css
+++ b/css/index.css
@@ -267,6 +267,8 @@ p {
 @media only screen and (min-width: 300px) and (max-width: 600px) {
   .home .walk {
     flex-direction: column-reverse;
+    align-items: center;
+    flex-wrap: wrap;
     padding: 15px;
     margin: 0;
   }
@@ -316,6 +318,11 @@ p {
   width: 46%;
   margin-left: 4%;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  .home .walk .walk-img {
+    width: 100%;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
@@ -323,15 +330,7 @@ p {
 }
 @media only screen and (min-width: 300px) and (max-width: 600px) {
   .home .walk .walk-img img {
-    width: auto;
-    margin: 20px 2.5%;
-    border-radius: 20px;
-    height: auto;
-  }
-}
-@media only screen and (min-width: 300px) and (max-width: 600px) {
-  .home .walk .walk-img {
-    width: calc(100% - 2rem);
+    margin-bottom: 2rem;
   }
 }
 .row {
@@ -363,6 +362,7 @@ p {
 }
 @media only screen and (min-width: 300px) and (max-width: 600px) {
   .row .col-1-of-1 nav ul li {
+    margin: 1.4rem;
     font-size: 100%;
   }
 }
