--- a/less/navigation.less
+++ b/less/navigation.less
@@ -31,6 +31,7 @@
                         margin: 2rem;
                         font-size: 1.5rem;
                         @media @mobile {
+                            margin: 1.4rem;
                             font-size: 100%;
                         }
                         a {
