--- a/css/index.css
+++ b/css/index.css
@@ -298,7 +298,8 @@ p {
 }
 .home .walk .walk-text .btn a:hover {
   font-weight: 900;
-  color: #00ffff;
+  background: white;
+  color: #22283A;
   box-shadow: 1px 1px 10px #22283A;
 }
 @media only screen and (min-width: 300px) and (max-width: 600px) {
@@ -387,4 +388,61 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  box-shadow: 1px 1px 20px black;
+  margin: 4rem auto;
+  width: 40%;
+  height: 40rem;
+}
+.form-wrapper .form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: #78ADCD;
+  box-shadow: 1px 1px 10px black;
+  width: calc(100% - 2rem);
+  height: 35rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.form-wrapper .form-container h1 {
+  margin: 2rem;
+  font-size: 3rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid white;
+}
+.form-wrapper .form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  margin: 2rem;
+  width: 100%;
+}
+.form-wrapper .form p input {
+  text-align: center;
+  font-size: 1.3rem;
+  margin: 1rem;
+}
+.form-wrapper .form p input:focus::-webkit-input-placeholder {
+  color: #011f5b;
+}
+.form-wrapper .form p textarea {
+  width: 40rem;
+  height: 10rem;
+}
+.form-wrapper .form p textarea:focus {
+  border: 2px solid #BCDBDC;
+}
+.form-wrapper .form p textarea:focus::-webkit-input-placeholder {
+  color: #011f5b;
 }
